--- a/experience/index.html
+++ b/experience/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
 
-    <title>Experience | Portfolio Jigar Sable</title>
+    <title>Experience | Portfolio ChandrashekharS</title>
 </head>
 <body oncontextmenu="return false">
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Chandrashekhar</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -25,143 +25,13 @@
             <li><a href="/#skills">Skills</a></li>
             <li><a href="/#education">Education</a></li>
             <li><a href="/#work">Work</a></li>
-            <li><a class="active" href="/#experience">Experience</a></li>
+            
             <li><a href="/#contact">Contact</a></li>
             </ul>
         </nav>
 </header>
 <!-- navbar ends -->
-
-<!-- experience section starts -->
-<section class="experience" id="experience">
-
-  <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
-  <div class="quote">
-      <span>Education is the most powerful weapon which you can use to change the world.</span>
-  </div>
-
-  <div class="timeline">
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Mumbai University</h2>
-        </div>
-        <div class="desc">
-            <h3>Bachelor of Engineering in AI & ML</h3>
-            <p>Oct 2022 - May 2025</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>CSMSS College Of Polytechnic</h2>
-          </div>
-          <div class="desc">
-              <h3> Computer Engineering</h3>
-              <p>July 2019 - October 2022</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2> Chate Heigh school</h2>
-          </div>
-          <div class="desc">
-              <h3>SSC (Secondary School Certificate)</h3>
-              <p>June 2018 - August 2019</p>
-          </div>
-        </div>
-      </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Online Certifications</h2>
-        </div>
-        <div class="desc">
-            <h3>Courses from Coursera, Udemy, etc.</h3>
-            <p>June 2023 - Dec 2023</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Workshops & Seminars</h2>
-        </div>
-        <div class="desc">
-            <h3>AI, Cybersecurity, and Web Technologies</h3>
-            <p>Attended across 2022–2024</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Workshops On Web Development</h2>
-        </div>
-        <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2024 - Aug 2024</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Frshr Technologies</h2>
-        </div>
-        <div class="desc">
-            <h3>Hackathons & Certifications </h3>
-            <p>April 2023 - Dec 2023</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>NariShakti – Women’s Safety App</h2>
-        </div>
-        <div class="desc">
-            <h3>Final Year Major Project</h3>
-            <p>March 2024 - Jan 2025</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>Naresh i Technologies</h2>
-          </div>
-          <div class="desc">
-              <h3>Java Full Stack Web Development Training</h3>
-              <p>June 2025 – Present | Hyderabad</p>
-          </div>
-        </div>
-      </div>
-
-  </div>
-
-  <div class="morebtn">
-    <a href="/#experience" class="btn">
-        <i class="fas fa-arrow-left"></i>
-        <span>Back to Home</span>
-  </a>
-  </div>
-
-</div>
-</section>
-<!-- experience section ends -->
+ 
 
 <!-- footer section starts -->
 <section class="footer">
@@ -180,7 +50,7 @@
           <a href="/#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
           <a href="/#education"><i class="fas fa-chevron-circle-right"></i> education</a>
           <a href="/#work"><i class="fas fa-chevron-circle-right"></i> work</a>
-          <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
+           
       </div>
 
       <div class="box">
